<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background"
    android:padding="8dp">


    <Spinner
        android:id="@+id/spinner_shapes"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Spinner"
        android:entries="@array/shapes"
        android:background="@drawable/spinner_background" />

    <EditText
        android:id="@+id/editText_Rectangle_Width"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="Rectangle Width"
        android:background="@drawable/edittext_background"
        android:gravity="center"
        android:hint="@string/rectangle_width"
        android:inputType="numberDecimal"
        android:padding="16dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/editText_Rectangle_height"
        app:layout_constraintStart_toStartOf="@+id/spinner_shapes"
        app:layout_constraintTop_toBottomOf="@+id/spinner_shapes" />

    <EditText
        android:id="@+id/editText_Rectangle_height"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:autofillHints="Rectangle Height"
        android:background="@drawable/edittext_background"
        android:gravity="center"
        android:hint="@string/rectangle_height"
        android:inputType="numberDecimal"
        android:padding="16dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/spinner_shapes"
        app:layout_constraintStart_toEndOf="@+id/editText_Rectangle_Width"
        app:layout_constraintTop_toTopOf="@+id/editText_Rectangle_Width" />

    <EditText
        android:id="@+id/editText_Circle_radius"
        android:layout_width="358dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:autofillHints="Circle Radius"
        android:background="@drawable/edittext_background"
        android:gravity="center"
        android:hint="@string/Circle_radius"
        android:inputType="numberDecimal"
        android:padding="16dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/spinner_shapes"
        app:layout_constraintStart_toStartOf="@+id/spinner_shapes"
        app:layout_constraintTop_toBottomOf="@+id/editText_Rectangle_height" />

    <EditText
        android:id="@+id/editText_Triangle_Base"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:autofillHints="Triangle Base"
        android:background="@drawable/edittext_background"
        android:gravity="center"
        android:hint="@string/triangle_base"
        android:inputType="numberDecimal"
        android:padding="16dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/editText_Triangle_height"
        app:layout_constraintStart_toStartOf="@+id/spinner_shapes"
        app:layout_constraintTop_toTopOf="@+id/editText_Triangle_height" />

    <EditText
        android:id="@+id/editText_Triangle_height"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:autofillHints="Triangle Height"
        android:background="@drawable/edittext_background"
        android:gravity="center"
        android:hint="@string/triangle_height"
        android:inputType="numberDecimal"
        android:padding="16dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/spinner_shapes"
        app:layout_constraintStart_toEndOf="@+id/editText_Triangle_Base"
        app:layout_constraintTop_toBottomOf="@+id/editText_Circle_radius" />

    <TextView
        android:id="@+id/textView_Result_Area"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/textview_background"
        android:gravity="center"
        android:hint="@string/result_Area"
        android:padding="16dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_calculateArea" />

    <Button
        android:id="@+id/button_calculateArea"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/black"
        android:padding="12dp"
        android:text="@string/calculateArea"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/spinner_shapes"
        app:layout_constraintStart_toStartOf="@+id/spinner_shapes"
        app:layout_constraintTop_toBottomOf="@+id/editText_Triangle_Base" />

</androidx.constraintlayout.widget.ConstraintLayout>